Added product page

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -20,6 +20,11 @@
             android:icon="@drawable/counter"
             android:title="Calorie Counter"/>
 
+    <item
+        android:id="@+id/productsFragment"
+        android:icon="@drawable/products"
+        android:title="Products"/>
+
 
 
 </menu>
